--- a/snow_inventory.ipynb
+++ b/snow_inventory.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "![title](Header__0001_9.png)\n",
     "___\n",
-    "## Chapter 9 - Web-based Data Visualizations with Plotly\n",
-    "### Segment 3 - Plotly maps\n",
+    "## Web-based Data Visualizations with Plotly\n",
+    "### Plotly maps\n",
     "#### Setting up to use Plotly within Jupyter"
    ]
   },
